V0.3 - Design refinements - Fix menu icon on small screens - Change background - Change (p)aragraphs font to more readable one - Center **h1** headers - Other minor changes and fixes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,46 +1,81 @@
 /* base */
 body {
-  background-image: url('{{ "img/geometry2.png" | absURL }}');
+    background: url(
+    data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAaUlEQVQoU12PCw2AMAwFbzaGDLCBDXSgAxvYABlgY+RgWxqaLOnn+vqWgBE4+WIFNuCudUk1EZorYCsDF5Aa4OYelAowqCTg0GeodLhZ62yiXL8JTNFTJ9vNv6cG9JvhN68nAYdRaYmeHot9F9X2eFD0AAAAAElFTkSuQmCC
+    ) repeat;
+}
+
+h1 {
+    text-align: center;
+    padding: 20px;
+}
+
+p {
+    font-family: sans-serif;
+}
+
+.paper {
+    max-width: 90%;
+    margin: 20px 5%;
 }
 
 /* anchors */
 a,
 a:visited {
-  color: rgb(0, 0, 238);
-  background-image: none;
-  text-decoration: underline;
+    color: rgb(0, 0, 238);
+    background-image: none;
+    /*text-decoration: underline;*/
 }
 
 /* navbar */
 nav a,
 nav a:visited {
-  color: #41403e;
-  text-decoration: none;
+    color: #41403e;
+    text-decoration: none;
 }
 
 /* blockquote */
 blockquote {
-  font-style: italic;
+    font-style: italic;
 }
 
 /* post list */
 .post-list {
-  font-size: 2em; 
+    font-size: 2em;
 }
+
 .summary {
-  margin-bottom: 0.1em; 
+    margin-bottom: 0.1em;
 }
 
 /* post single */
 .post-title {
-  margin-bottom: 0.1em; 
+    margin-bottom: 0.1em;
 }
 
 /* toc */
 .toc {
-  padding: 1em;
-  margin-top: 1em;
+    padding: 1em;
+    margin-top: 1em;
 }
+
 .toc h2 {
-  font-size: 1.3em;
+    font-size: 1.3em;
+}
+
+nav .bar1,
+nav .bar2,
+nav .bar3 {
+    background-color: #41403e;
+    background-color: var(--primary);
+    border-color: #41403e;
+    border-color: var(--primary);
+    color: #41403e;
+    color: var(--primary);
+    border-bottom-left-radius: 15px 5px;
+    border-bottom-right-radius: 15px 3px;
+    margin: 6px 0;
+    transition: 0.4s;
+    width: 2rem;
+    border-bottom: 5px solid #41403e;
 }
